# microbit-discovery-examples

./: .gitignore  README.md
i2c/: Cargo.toml  build.rs  memory.x
i2c/.cargo/: config
i2c/src/: main.rs
led_compass/: Cargo.toml
led_compass/src/: calibration.rs  led.rs  main.rs
led_roulette/: Cargo.toml  Embed.toml  memory.x
led_roulette/src/: main.rs
punch_o_meter/: Cargo.toml  memory.x
punch_o_meter/src/: main.rs
scrolling_led/: Cargo.toml  README.md
scrolling_led/src/: main.rs
