[package]
name    = "i2c-example"
version = "0.1.0"
authors = ["Mikhail Molotkov"]
edition = "2018"

[dependencies.microbit-v2]
version  = "0.12.0"
optional = true

[dependencies]
cortex-m         = "0.7.3"
cortex-m-rt      = "0.7.0"
embedded-hal     = "0.2.6"
heapless         = "0.7.10"
lsm303agr        = "0.2.2"
nb               = "1.0.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target       = { version = "0.3.1", features = ["cortex-m"] }


[features]
v2 = ["microbit-v2"]


[profile.release]
# strip     = true # Automatically strip symbols from the binary.
# opt-level = "z"  # Optimize for size.
# lto       = true # Instructs the linker to optimize at the link stage
