[package]
name    = "scrolling_led"
version = "0.1.0"
authors = ["MikhailMS <1488maiklm@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m               = "0.7.3"
cortex-m-rt            = "0.7.0"
cortex-m-rtic          = { version = "0.5", default-features = false, features = ["cortex-m-7"] }
microbit-text-scroller = { git = "https://github.com/MikhailMS/microbit-text-scroller" }
microbit-v2            = "0.12.0"
panic-halt             = "0.2.0"
# Enable below 2 to enable RTT feedback
# panic-rtt-target       = { version = "0.1.2", features = ["cortex-m"] }
# rtt-target             = { version = "0.3.1", features = ["cortex-m"] }

[profile.release]
# Uncomment below options only when building without RTT and/or GDB
# strip     = true # Automatically strip symbols from the binary.
# opt-level = "z"  # Optimize for size.
# lto       = true # Instructs the linker to optimize at the link stage
